bluec-tests/tests/valid/types_char/array_string_initializer_excess_static.c
int main(void) {
    static char too_long[3] = "abcd";
    return too_long[2] == 'c';
}